--- a/main.tex
+++ b/main.tex
@@ -353,7 +353,6 @@ language uses the instruction \emph{applyLayout:}. \emph{Layouts}
 define the methods (or metrics) that will be used to decide how
 to display the elements.The application of a \emph{Layout} will 
 affect every \emph{node}(\emph{edge}) defined before itself.
-\rj{color example removed :P, every "numbers" examples changed}
  
 The special value system mentioned before is a way of sending
 mesages to \emph{nodes} or \emph{edges} that will be evaluated
@@ -664,7 +663,26 @@ graphics of Klotz (and the engines take to much effort on just
 configuration, external to the Klotz interface), this matter
 remains pending.
 
-\subsection{CodeCity~\cite{Wett08d}}
+\subsection{CodeCity~\cite{Wett08d}}\rj{ just changed this}
+CodeCity is a full fledged city metaphor environment, for code
+analisys. Its Visualization is based on this metaphor, and its
+metrics are entirely defined (and chosen carefully) to faithfully
+explain software code. This concrete approach intends to focus
+not only on the visualization itself, but in the analysis of sofware
+evolution. It also support  reverse engineering.
+
+CodeCity is programmed in VisualWorks Smalltalk on top of the Moose 
+platform, just like Lumiere, it uses OpenGL for rendering.
+
+when it comes to Klotz, not been as powerful as Codecity, eventually, 
+and depending on the programer's skills, it can implement every static 
+aspect of its model. The same metrics defined on it to represent code 
+can be applied to a yet customable enviroment, with a simple Pharo image. 
+This can be very complex and carry lots of trouble that CodeCity has 
+already fixed (probably). But as said before, the main idea is not to 
+create a city metaphor model, but to have a meta-model creation system, 
+meant to easily display many diferent aspects of a code analysis on the 
+same framework and with a scripting lenguage, designed to be easy to manage.
 
 
 %:%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
