--- a/main.tex
+++ b/main.tex
@@ -713,8 +713,9 @@ same framework and with a scripting language, designed to be easy to manage.
 
 %:%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusion} \seclabel{conclusion}
-
+\rj{i just added some extra content here}
 Klotz is an agile three-dimensional visualization engine. Klotz visualizes a graph of objects, without any preparation of the objects.
+Klotz meta-model system allows to change a graph definition easily, making it simple and fast to adjust a desired visualization. Been based on any object as the items represented on the node it gives great dynamism to the kind of visualization that it can provide. 
 As future work, we plan to:
 \begin{itemize}
 \item Implement drag-and-drop support to manage the nodes easily.
